service.yaml
kind: Service
apiVersion: v1
metadata:
  name: hello-world
spec:
  ports:
    - name: web
      port: 80
      targetPort: web
  selector:
    app: hello-world
