ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: hello-world-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-world
            port:
              name: web
